--- a/src/styles/components/_collection-asset-card.scss
+++ b/src/styles/components/_collection-asset-card.scss
@@ -5,6 +5,7 @@ a {
 
   .collection-asset-card {
     width: 100%;
+
     border: 1px solid #f0f0f1;
     padding: 0.8rem;
     border-radius: 10px;
@@ -25,10 +26,15 @@ a {
 
     .asset-card-image {
       width: 100%;
-
+      height: 100%;
+      max-height: 234.63px;
+      overflow: hidden;
+      border-radius: 5px;
       img {
         object-fit: cover;
         width: 100%;
+        height: 100%;
+        min-height: 234.63px;
       }
     }
 
