--- a/src/styles/pages/home/_all-collections-table-section.scss
+++ b/src/styles/pages/home/_all-collections-table-section.scss
@@ -1,7 +1,8 @@
 @import '../../variables.scss';
 
 .all-collections-table-section {
-  padding: 3rem;
+  padding: 5rem;
+  min-height: 100vh;
   h1 {
     font-family: $default-font;
     color: $secondary-color;
