--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -9,6 +9,8 @@
   display: flex;
   font-family: $default-font;
   gap: 1rem;
+  min-height: 674px;
+  min-width: 716px;
   max-height: 1000px;
   .asset-detail-modal-info {
     width: 400px;
@@ -30,7 +32,8 @@
     }
 
     .img-wrapper {
-      min-height: 380px;
+      overflow: hidden;
+      border-radius: 5px;
 
       .img {
         width: 100%;
@@ -74,7 +77,7 @@
 
   .asset-detail-modal-stats {
     width: 300px;
-    max-height: 715px;
+
     overflow-y: auto;
 
     .rarity-score {
