--- a/src/styles/components/_asset-result-card.scss
+++ b/src/styles/components/_asset-result-card.scss
@@ -19,16 +19,17 @@
 
     .asset-info {
       display: flex;
+      width: 50%;
       gap: 2rem;
       .asset-result-card-info-container {
         .asset-result-card-info {
           display: flex;
           align-items: center;
-          img {
+          .asset-result-img {
             object-fit: cover;
             width: 50px;
             height: 50px;
-            border-radius: 50%;
+            border-radius: 2px;
             margin-right: 0.7rem;
           }
 
@@ -57,27 +58,18 @@
         }
         .asset-card-info-stats {
           margin-top: 10px;
+          display: flex;
+          flex-wrap: wrap;
+          width: 100%;
+          line-height: 15px;
           p {
             color: $secondary-color;
-            margin: 0;
+            margin: 0.3rem 0.5rem;
 
             strong {
               color: $primary-color;
               font-weight: 400;
             }
-          }
-        }
-      }
-
-      .asset-result-card-stats {
-        align-self: flex-end;
-        p {
-          color: $secondary-color;
-          margin: 0;
-
-          strong {
-            color: $primary-color;
-            font-weight: 400;
           }
         }
       }
@@ -87,10 +79,9 @@
       width: 40%;
       display: flex;
       justify-self: flex-end;
-      justify-content: space-between;
+      justify-content: center;
 
       .asset-preview {
-        width: 70%;
         display: flex;
         justify-content: center;
         .asset {
@@ -99,8 +90,9 @@
             margin: 0;
             margin-bottom: 0.3rem;
           }
-          img {
-            width: 100px;
+          .asset-preview-img {
+            width: 120px;
+            height: 120px;
           }
         }
       }
@@ -127,6 +119,7 @@
       flex-direction: column;
 
       .asset-info {
+        width: 100%;
         flex-direction: column;
         gap: 1rem;
         margin-bottom: 1rem;
