--- a/src/styles/components/_collection-asset-card.scss
+++ b/src/styles/components/_collection-asset-card.scss
@@ -4,8 +4,8 @@ a {
   text-decoration: none;
 
   .collection-asset-card {
-    width: 100%;
-
+    width: 300px;
+    height: 300px;
     border: 1px solid #f0f0f1;
     padding: 0.8rem;
     border-radius: 10px;
@@ -27,9 +27,10 @@ a {
     .asset-card-image {
       width: 100%;
       height: 100%;
-      max-height: 234.63px;
+      max-height: 200px;
       overflow: hidden;
       border-radius: 5px;
+
       img {
         object-fit: cover;
         width: 100%;
@@ -59,6 +60,16 @@ a {
           color: $primary-color;
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  a {
+    width: 100%;
+    .collection-asset-card {
+      // height: 300px;
+      width: 100%;
     }
   }
 }
