--- a/src/styles/components/_collection-result-card.scss
+++ b/src/styles/components/_collection-result-card.scss
@@ -16,14 +16,16 @@
   .collection-result-card-body {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     .collection-info {
+      width: 50%;
       display: flex;
-      gap: 2rem;
+      gap: 3rem;
       .collection-result-card-info-container {
         .collection-result-card-info {
           display: flex;
           align-items: center;
-          img {
+          .collection-result-img {
             object-fit: cover;
             width: 50px;
             height: 50px;
@@ -41,18 +43,25 @@
               color: #686767;
               margin: 0;
             }
-
             small {
-              color: $primary-color;
+              color: $secondary-color;
+
+              strong {
+                color: $primary-color;
+                font-weight: 400;
+              }
             }
           }
         }
         .card-info-stats {
           margin-top: 10px;
+          width: 100%;
+          display: flex;
+          flex-wrap: wrap;
+          line-height: 15px;
           p {
             color: $secondary-color;
-            margin: 0;
-
+            margin: 0.3rem 0.5rem;
             strong {
               color: $primary-color;
               font-weight: 400;
@@ -60,23 +69,9 @@
           }
         }
       }
-
-      .collection-result-card-stats {
-        align-self: flex-end;
-        p {
-          color: $secondary-color;
-          margin: 0;
-
-          strong {
-            color: $primary-color;
-            font-weight: 400;
-          }
-        }
-      }
     }
 
     .collection-result-card-s {
-      width: 40%;
       display: flex;
       justify-self: flex-end;
       justify-content: space-between;
@@ -96,30 +91,16 @@
           display: flex;
 
           .asset {
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
 
-            img {
+            .asset-img {
               width: 100%;
               height: 100%;
+              border-radius: 2px;
               object-fit: cover;
             }
           }
-        }
-      }
-
-      .wego-score {
-        text-align: center;
-        p {
-          font-weight: 600;
-          color: $primary-color;
-          margin: 0;
-        }
-
-        small {
-          font-size: 20px;
-          font-weight: 600;
-          color: #38b87d;
         }
       }
     }
@@ -130,6 +111,7 @@
   .collection-result-card {
     .collection-result-card-body {
       .collection-info {
+        width: 100%;
         gap: 0;
         .collection-result-card-stats {
           p {
@@ -149,12 +131,7 @@
       .collection-result-card-s {
         margin-top: 30px;
         .assets {
-          width: 100%;
           .assets-container {
-            .asset {
-              width: 50px;
-              height: 50px;
-            }
           }
         }
 
@@ -167,7 +144,7 @@
 }
 
 //small screens
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 735px) {
   .collection-result-card {
     .collection-result-card-body {
       flex-direction: column;
@@ -183,12 +160,12 @@
       }
       .collection-result-card-s {
         width: 100%;
-
+        justify-content: center;
         .assets {
           .assets-container {
             .asset {
-              width: 70px;
-              height: 70px;
+              width: 100px;
+              height: 100px;
             }
           }
         }
