--- a/src/styles/pages/Search/index.scss
+++ b/src/styles/pages/Search/index.scss
@@ -5,8 +5,13 @@
   padding: 2rem;
   .full-search-header {
     display: flex;
-
+    background-color: #fff;
     align-items: flex-end;
+    position: sticky;
+    top: 70px;
+    z-index: 999;
+    padding: 0.5rem;
+
     img {
       width: 230px;
       height: 100%;
@@ -48,36 +53,52 @@
         margin-right: 2.5rem;
         border-bottom: 1px solid transparent;
         white-space: nowrap;
+        position: relative;
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          display: inline-block;
+          height: 0.9rem;
+          width: 100%;
+          border-bottom: 1px solid $primary-color;
+          margin-top: 10px;
+          opacity: 0;
+          -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+          transition: opacity 0.35s, transform 0.35s;
+          -webkit-transform: scale(0, 1);
+          transform: scale(0, 1);
+        }
 
         &:hover {
-          border-bottom: 1px solid $primary-color;
-
-          &:last-child {
-            border-bottom: none;
+          &::after {
+            opacity: 1;
+            -webkit-transform: scale(1);
+            transform: scale(1);
           }
         }
       }
     }
 
-    .toggle-tools {
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      border: 1px solid #d6d6d6;
-      padding: 5px;
-      border-radius: 5px;
-      color: $secondary-color;
-      p {
-        margin: 0;
-        margin-right: 5px;
-      }
+    // .toggle-tools {
+    //   display: flex;
+    //   align-items: center;
+    //   cursor: pointer;
+    //   border: 1px solid #d6d6d6;
+    //   padding: 5px;
+    //   border-radius: 5px;
+    //   color: $secondary-color;
+    //   p {
+    //     margin: 0;
+    //     margin-right: 5px;
+    //   }
 
-      &:hover {
-        color: $secondary-color-hover;
-        border: 1px solid #adadad;
-        box-shadow: rgb(3 17 29 / 15%) 0px 0px 10px 0px;
-      }
-    }
+    //   &:hover {
+    //     color: $secondary-color-hover;
+    //     border: 1px solid #adadad;
+    //     box-shadow: rgb(3 17 29 / 15%) 0px 0px 10px 0px;
+    //   }
+    // }
   }
   .tools {
     display: flex;
@@ -166,8 +187,11 @@
 
     .match-found {
       width: 30%;
-      display: flex;
-      justify-content: center;
+
+      a {
+        display: flex;
+        justify-content: center;
+      }
     }
 
     .mobile-match {
