--- a/src/styles/components/_search-input.scss
+++ b/src/styles/components/_search-input.scss
@@ -7,15 +7,34 @@
   padding: 0.8rem;
   border-radius: 1.4rem;
   border: 1px solid #c7c7c7;
-  &::placeholder {
-    color: #aaaaaa;
-  }
+  display: flex;
+  align-items: center;
+  cursor: text;
+  justify-content: space-between;
 
-  &:focus {
-    border: 1px solid $primary-color;
+  svg {
+    cursor: pointer;
   }
+  .input {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    svg {
+      color: $secondary-color;
+      margin-right: 5px;
+    }
+    input {
+      width: 100%;
+      color: $secondary-color;
+      border: none;
 
-  &:focus-within {
-    outline: none;
+      &::placeholder {
+        color: #aaaaaa;
+      }
+
+      &:focus-within {
+        outline: none;
+      }
+    }
   }
 }
