--- a/src/styles/pages/Search/index.scss
+++ b/src/styles/pages/Search/index.scss
@@ -9,9 +9,9 @@
     align-items: flex-end;
     position: sticky;
     top: 70px;
-    z-index: 999;
+    z-index: 30;
     padding: 0.5rem;
-
+    width: 100%;
     img {
       width: 230px;
       height: 100%;
@@ -19,9 +19,8 @@
       margin-right: 1rem;
     }
 
-    input {
-      width: 450px;
-      height: 52px;
+    .search-input {
+      width: 30%;
     }
 
     small {
@@ -198,6 +197,13 @@
       display: none;
     }
   }
+
+  .paginator-wrapper {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 // @media screen and (max-width: 1200px) {
@@ -214,8 +220,8 @@
         margin-bottom: 0.7rem;
       }
 
-      input {
-        width: 450px;
+      .search-input {
+        width: 70%;
       }
 
       small {
@@ -298,8 +304,8 @@
 @media screen and (max-width: 576px) {
   .full-search-container {
     .full-search-header {
-      input {
-        width: 70vw;
+      .search-input {
+        width: 100%;
       }
     }
 
