WG-92 collection images missing loading

--- a/src/styles/components/_hot-collections-bar.scss
+++ b/src/styles/components/_hot-collections-bar.scss
@@ -41,7 +41,7 @@
           white-space: nowrap;
         }
 
-        img {
+        .h-collection-img {
           width: 20px;
           height: 20px;
           border-radius: 50%;
