--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -1,19 +1,15 @@
 @import '../variables.scss';
 
 .asset-detail-modal-body {
-  border-radius: 10px;
   background-color: #fff;
   border: 5px solid $primary-color;
-  box-shadow: rgb(4 17 29 / 25%) 0px 0px 10px 0px;
-  padding: 1rem;
   display: flex;
   font-family: $default-font;
   gap: 1rem;
-  min-height: 674px;
-  width: 716px;
-  max-height: 1000px;
+  flex-wrap: wrap;
+  justify-content: center;
   .asset-detail-modal-info {
-    width: 400px;
+    max-width: 400px;
     border: 2px solid rgba(209, 213, 219, 1);
     border-radius: 10px;
     padding: 0.5rem;
@@ -188,30 +184,29 @@
       }
     }
   }
+  .modal-loader {
+    width: 700px;
+    min-width: auto;
+    height: 600px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
 }
 
 // @media screen and (max-width: 1200px) {
 
 // }
 
-@media screen and (max-width: 768px) {
-  .asset-detail-modal-body {
-    flex-direction: column;
-    overflow-y: auto;
-    width: initial;
-    .asset-detail-modal-info {
-      width: 300px;
-    }
+@media screen and (max-width: 834) {
+  .modal-loader {
+    min-width: 650px;
   }
 }
 
-// //small screens
+//small screens
 @media screen and (max-width: 576px) {
-  .asset-detail-modal-body {
-    flex-direction: column;
-    overflow-y: auto;
-    .asset-detail-modal-info {
-      width: 300px;
-    }
+  .modal-loader {
+    min-width: 311px;
   }
 }
