WG-96 get listed page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,3 +3,4 @@
 @use './pages/home/index.scss' as home;
 @use './pages/collection/index.scss' as collectionDetails;
 @use './pages/Search/index.scss' as search;
+@use './pages/getListed/Index.scss' as getListed;
