--- a/src/styles/components/_paginator.scss
+++ b/src/styles/components/_paginator.scss
@@ -13,9 +13,8 @@
   li {
     margin: 0 0.5rem;
     font-size: 20px;
-    border-bottom: 1px solid transparent;
     &:hover {
-      border-bottom: 1px solid #000;
+      color: rgb(51, 51, 51);
     }
   }
 
@@ -23,7 +22,6 @@
     color: $primary-color;
 
     &:hover {
-      border-bottom: 1px solid $primary-color;
     }
   }
 }
