--- a/src/styles/pages/home/_nft-search-section.scss
+++ b/src/styles/pages/home/_nft-search-section.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
   align-items: center;
   width: 100vw;
   height: 40vh;
